# rocks

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.zig  build.zig.zon  flake.nix  lua-cjson-2.1.0.9-1.rockspec  lua-cjson.rockspec  rocks.toml  test.lua  todo.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: cargo-upgrade.yml  integration-tests.yml  nix-build.yml  nix-release-build.yml  update-flacke-lock.yml  update-flake-lock.yml
lux-bin/: Cargo.toml
lux-bin/src/: add.rs  build.rs  download.rs  fetch.rs  install.rs  install_lua.rs  lib.rs  main.rs  pack.rs  pin.rs  remove.rs  run.rs  sync.rs  test.rs  update.rs
lux-bin/src/project/: debug.rs
lux-bin/src/utils/: github_metadata.rs  mod.rs
lux-cli/: Cargo.toml
lux-cli/src/: add.rs  build.rs  check.rs  config.rs  doc.rs  format.rs  info.rs  install_rockspec.rs  lib.rs  list.rs  outdated.rs  pack.rs  path.rs  purge.rs  remove.rs  run_lua.rs  search.rs  sync.rs  uninstall.rs  unpack.rs  update.rs  upload.rs  which.rs
lux-cli/src/project/: new.rs
lux-cli/src/utils/: install.rs
lux-lib/: Cargo.toml
lux-lib/resources/test/: lua-cjson-2.1.0-1.rockspec  luaposix-35.1-1.rockspec  luatest-0.2-1.src.rock  luv-1.48.0-2.rockspec  tree-sitter-rust-0.0.43.rockspec
lux-lib/resources/test/make-project/: Makefile
lux-lib/resources/test/sample-project-busted/: .gitignore
lux-lib/resources/test/sample-project-extra-rockspec/: lux.toml
lux-lib/resources/test/sample-project-lockfile-missing-deps/: lux.toml
lux-lib/resources/test/sample-project-no-build-spec/: lux.toml
lux-lib/resources/test/sample-tree/5.1/: lock.json
lux-lib/src/: hash.rs  path.rs  progress.rs
lux-lib/src/config/: mod.rs
lux-lib/src/lockfile/: mod.rs
lux-lib/src/lockfile/snapshots/: lux_lib__lockfile__tests__add_rocks.snap  lux_lib__lockfile__tests__parse_lockfile.snap
lux-lib/src/lua_installation/: mod.rs
lux-lib/src/lua_rockspec/: dependency.rs  mod.rs  platform.rs  rock_source.rs  test_spec.rs
lux-lib/src/luarocks/: install_binary_rock.rs  luarocks_installation.rs
lux-lib/src/manifest/: mod.rs
lux-lib/src/operations/: download.rs  fetch.rs  install.rs  pack.rs  pin.rs  remove.rs  resolve.rs  sync.rs  test.rs  unpack.rs  update.rs
lux-lib/src/package/: mod.rs  version.rs
lux-lib/src/project/: mod.rs  project_toml.rs
lux-lib/src/remote_package_db/: mod.rs
lux-lib/src/remote_package_source/: mod.rs
lux-lib/src/rockspec/: mod.rs
lux-lib/src/tree/: mod.rs
lux-lib/src/tree/snapshots/: lux_lib__tree__tests__tree_list.snap
lux-lib/src/upload/: mod.rs
lux-lib/src/which/: mod.rs
lux-lib/tests/: build.rs  luarocks_installation.rs  run.rs  test.rs  tree.rs
lux-lua/: Cargo.toml  loader-notes.txt
lux-lua/.cargo/: config.toml
lux-lua/src/: lib.rs  loader.rs
nix/: overlay.nix
rocks-bin/: Cargo.toml
rocks-bin/src/: add.rs  build.rs  check.rs  config.rs  debug.rs  doc.rs  download.rs  fetch.rs  format.rs  info.rs  install.rs  install_lua.rs  install_rockspec.rs  lib.rs  list.rs  main.rs  outdated.rs  pack.rs  path.rs  pin.rs  purge.rs  remove.rs  run.rs  run_lua.rs  search.rs  sync.rs  test.rs  uninstall.rs  unpack.rs  update.rs  upload.rs  which.rs
rocks-bin/src/project/: debug.rs  mod.rs  new.rs  write_new.rs
rocks-bin/src/rockspec/: github_metadata.rs  mod.rs  write_rockspec.rs
rocks-bin/src/utils/: github_metadata.rs  install.rs  mod.rs
rocks-lib/: Cargo.toml
rocks-lib/proptest-regressions/rocks/: platform.txt
rocks-lib/resources/test/: lua-cjson-2.1.0-1.rockspec  lua-cjson-2.1.0.9-1.rockspec  manifest  manifest-5.1  toml-edit-0.6.0-1.linux-x86_64.rock
rocks-lib/resources/test/make-project/: make-project-scm-1.rockspec
rocks-lib/resources/test/sample-project-busted/: .gitignore  project.rockspec
rocks-lib/resources/test/sample-project-busted/spec/: example_spec.lua
rocks-lib/resources/test/sample-project-extra-rockspec/: extra.rockspec
rocks-lib/resources/test/sample-project-lockfile-missing-deps/: README.md  project.rockspec
rocks-lib/resources/test/sample-project-no-build-spec/: project.rockspec
rocks-lib/resources/test/sample-tree/5.1/: lock.json
rocks-lib/src/: hash.rs  lib.rs  luarocks_installation.rs  path.rs  progress.rs
rocks-lib/src/config/: external_deps.rs  mod.rs
rocks-lib/src/lockfile/: mod.rs
rocks-lib/src/lockfile/snapshots/: rocks_lib__lockfile__tests__add_rocks.snap  rocks_lib__lockfile__tests__parse_lockfile.snap
rocks-lib/src/lua/: mod.rs
rocks-lib/src/lua_installation/: mod.rs
rocks-lib/src/lua_package/: mod.rs  outdated.rs  version.rs
rocks-lib/src/lua_rockspec/: mod.rs  partial.rs  platform.rs  rock_source.rs  serde_util.rs  test_spec.rs
rocks-lib/src/luarock/: mod.rs  outdated.rs  version.rs
rocks-lib/src/luarocks/: install_binary_rock.rs  luarocks_installation.rs  mod.rs  rock_manifest.rs
rocks-lib/src/manifest/: metadata.rs  mod.rs  pull_manifest.rs
rocks-lib/src/operations/: download.rs  fetch.rs  install.rs  lockfile_update.rs  mod.rs  pack.rs  pin.rs  remove.rs  resolve.rs  run.rs  sync.rs  test.rs  unpack.rs  update.rs
rocks-lib/src/package/: mod.rs  outdated.rs  version.rs
rocks-lib/src/project/: mod.rs  rocks_toml.rs
rocks-lib/src/remote_package/: mod.rs  outdated.rs  version.rs
rocks-lib/src/remote_package_db/: mod.rs
rocks-lib/src/remote_package_source/: mod.rs
rocks-lib/src/rocks/: dependency.rs  download.rs  mod.rs  platform.rs  rock_source.rs  rockspec.rs  unpack.rs
rocks-lib/src/rockspec/: build.rs  dependency.rs  mod.rs  platform.rs  rock_source.rs  serde_util.rs  test_spec.rs
rocks-lib/src/tree/: list.rs  mod.rs
rocks-lib/src/tree/snapshots/: rocks_lib__tree__tests__tree_list.snap  rocks_lib__tree__tests__tree_list.snap.new
rocks-lib/src/upload/: mod.rs
rocks-lib/src/which/: mod.rs
rocks-lib/tests/: build.rs  luarocks_installation.rs  run.rs  test.rs  tree.rs
rocks-lua/: Cargo.toml
rocks-lua/src/: lib.rs
src/lib/manifest/: metadata.rs  pull_manifest.rs
src/manifest/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
