[package]
name = "lux-cli"
version = "0.1.0"
description = "A luxurious package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
homepage = "https://github.com/nvim-neorocks/lux"
license = "MIT"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools", "command-line-utilities"]
edition = "2021"

[[bin]]
name = "lx"
test = false
bench = false

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
eyre = "0.6.12"
git-url-parse = "0.4.4"
git2 = "0.20.0"
inquire = "0.7.5"
itertools = "0.14.0"
nucleo = "0.5.0"
octocrab = "0.43.0"
serde_json = "1.0.118"
spdx = "0.10.4"
spinners = "4.1.1"
stylua = { version = "2.0.0", features = ["fromstr", "lua52"] }
strum = "0.27.0"
strum_macros = "0.27.0"
tempdir = "0.3.7"
termcolor = "1.4.1"
text_trees = "0.1.2"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
uzers = "0.12.1"
walkdir = "2.5.0"
which = "7.0.0"
indicatif = "0.17.8"
path-absolutize = "3.1.1"
url = "2.5.4"
open = "5.3.2"
edit = "0.1.5"

[dev-dependencies]
assert_fs = "1.1.2"

[dependencies.lux-lib]
version = "0.1.0"
path = "../lux-lib/"
features = ["clap"]
