[package]
name = "rocks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
eyre = "0.6.12"
git-url-parse = "0.4.4"
git2 = "0.19.0"
inquire = "0.7.5"
itertools = "0.14.0"
nucleo = "0.5.0"
octocrab = "0.43.0"
serde_json = "1.0.118"
spdx = "0.10.4"
spinners = "4.1.1"
stylua = { version = "2.0.0", features = ["fromstr", "lua52"] }
strum = "0.26.3"
strum_macros = "0.26.4"
termcolor = "1.4.1"
text_trees = "0.1.2"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
uzers = "0.12.1"
walkdir = "2.5.0"
which = "7.0.0"
indicatif = "0.17.8"
path-absolutize = "3.1.1"
url = "2.5.4"
open = "5.3.2"
edit = "0.1.5"

[dev-dependencies]
assert_fs = "1.1.2"

[dependencies.rocks-lib]
path = "../rocks-lib/"
features = ["clap"]
