[package]

name = "rocks-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.98"
directories = "5.0.1"
eyre = "0.6.12"
git-url-parse = "0.4.4"
git2 = "0.19.0"
html-escape = "0.2.13"
httpdate = "1.0.3"
itertools = "0.13.0"
mlua = { version = "0.9.6", features = ["luajit52", "serialize"] }
pathdiff = "0.2.1"
regex = "1.10.3"
reqwest = "0.12.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ssri = "9.2.0"
strum = { version = "0.26" }
strum_macros = "0.26"
tokio = { version = "1.36.0", features = ["macros"] }
tempdir = "0.3.7"
vfs = "0.12.0"
walkdir = "2.4.0"
zip = "2.2.0"
insta = { version = "1.39.0", features = ["redactions", "yaml"] }
which = "6.0.3"
lets_find_up = "0.0.3"
remove_dir_all = "0.8.3"
openssl = "0.10.66"
lua-src = "547.0.0"
luajit-src = "210.5.10"
target-lexicon = "0.12.16"
clap = { version = "4.5.3", features = ["derive"], optional = true}
async-recursion = "1.1.1"

[dev-dependencies]
httptest = { version = "0.16.1" }
serial_test = { version = "3.0.0" }
proptest = "1.4.0"
dir-diff = "0.3.3"
insta = "1.39.0"

[features]
clap = ["dep:clap"]
